specifications/.antlr/GrammarParser.java
// Generated from c:/Users/sanch/OneDrive/Desktop/U N I/3 UNI/2do Semestre/Diseño de Lenguajes de Programación/Practica/DLP_language/DLP_language/mlang_nahiaraSanchez/specifications/Grammar.g4 by ANTLR 4.13.1

    import ast.*;
	import ast.type.*;
	import ast.declaration.*;
	import ast.statement.*;
	import ast.expression.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		INT_REAL=39, INT_LITERAL=40, CHAR_LITERAL=41, LINE_COMMENT=42, MULTILINE_COMMENT=43, 
		WHITESPACE=44, SEMICOLON=45, ID=46;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_statement = 2, RULE_block = 3, 
		RULE_call_function = 4, RULE_assignment = 5, RULE_expression = 6, RULE_variable_definition = 7, 
		RULE_struct_definition = 8, RULE_function_definition = 9, RULE_simpleType = 10, 
		RULE_type = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "statement", "block", "call_function", "assignment", 
			"expression", "variable_definition", "struct_definition", "function_definition", 
			"simpleType", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'return'", "'print'", "','", "'printsp'", "'println'", "'read'", 
			"'while'", "'('", "')'", "'{'", "'}'", "'if'", "'else'", "'='", "'.'", 
			"'!'", "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'>'", 
			"'<='", "'>='", "'=='", "'!='", "'['", "']'", "'var'", "':'", "'struct'", 
			"'int'", "'float'", "'char'", "'void'", null, null, null, null, null, 
			null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "INT_REAL", "INT_LITERAL", "CHAR_LITERAL", "LINE_COMMENT", 
			"MULTILINE_COMMENT", "WHITESPACE", "SEMICOLON", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Declaration> declarations = new ArrayList<>();
		public Variable_definitionContext operator1;
		public Struct_definitionContext operator2;
		public Function_definitionContext operator3;
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public List<Struct_definitionContext> struct_definition() {
			return getRuleContexts(Struct_definitionContext.class);
		}
		public Struct_definitionContext struct_definition(int i) {
			return getRuleContext(Struct_definitionContext.class,i);
		}
		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}
		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70390219014144L) != 0)) {
				{
				setState(33);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(24);
					((ProgramContext)_localctx).operator1 = variable_definition();
					_localctx.declarations.add(((ProgramContext)_localctx).operator1.ast);
					}
					break;
				case 2:
					{
					setState(27);
					((ProgramContext)_localctx).operator2 = struct_definition();
					_localctx.declarations.add(((ProgramContext)_localctx).operator2.ast);
					}
					break;
				case 3:
					{
					setState(30);
					((ProgramContext)_localctx).operator3 = function_definition();
					_localctx.declarations.add(((ProgramContext)_localctx).operator3.ast);
					}
					break;
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(EOF);
			((ProgramContext)_localctx).ast =  new Program(_localctx.declarations);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public Declaration ast;
		public Variable_definitionContext variable_definition;
		public Struct_definitionContext struct_definition;
		public Function_definitionContext function_definition;
		public Variable_definitionContext variable_definition() {
			return getRuleContext(Variable_definitionContext.class,0);
		}
		public Struct_definitionContext struct_definition() {
			return getRuleContext(Struct_definitionContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				((DeclarationContext)_localctx).variable_definition = variable_definition();
				 ((DeclarationContext)_localctx).ast =  ((DeclarationContext)_localctx).variable_definition.ast; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				((DeclarationContext)_localctx).struct_definition = struct_definition();
				 ((DeclarationContext)_localctx).ast =  ((DeclarationContext)_localctx).struct_definition.ast; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				((DeclarationContext)_localctx).function_definition = function_definition();
				 ((DeclarationContext)_localctx).ast =  ((DeclarationContext)_localctx).function_definition.ast; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Statement ast;
		public List<Expression> expressions = new ArrayList<>();
		public List<Statement> statements1 = new ArrayList<>();
		public List<Statement> statements2 = new ArrayList<>();
		public ExpressionContext e1;
		public ExpressionContext exp1;
		public ExpressionContext exp2;
		public ExpressionContext expression;
		public StatementContext operator2;
		public BlockContext b1;
		public BlockContext b2;
		public AssignmentContext assignment;
		public Token ID;
		public Call_functionContext call_function;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public Call_functionContext call_function() {
			return getRuleContext(Call_functionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			int _alt;
			setState(162);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				match(T__0);
				((StatementContext)_localctx).ast =  new Return_statement(null);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				match(T__0);
				setState(55);
				((StatementContext)_localctx).e1 = expression(0);
				 ((StatementContext)_localctx).ast =  new Return_statement(((StatementContext)_localctx).e1.ast); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				match(T__1);
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(59);
						((StatementContext)_localctx).exp1 = expression(0);
						 _localctx.expressions.add(((StatementContext)_localctx).exp1.ast);
						setState(67);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==T__2) {
							{
							{
							setState(61);
							match(T__2);
							setState(62);
							((StatementContext)_localctx).exp2 = expression(0);
							 _localctx.expressions.add(((StatementContext)_localctx).exp2.ast);
							}
							}
							setState(69);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						} 
					}
					setState(74);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				 ((StatementContext)_localctx).ast =  new Print_statement(_localctx.expressions); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				match(T__3);
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(77);
						((StatementContext)_localctx).exp1 = expression(0);
						 _localctx.expressions.add(((StatementContext)_localctx).exp1.ast);
						setState(85);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==T__2) {
							{
							{
							setState(79);
							match(T__2);
							setState(80);
							((StatementContext)_localctx).exp2 = expression(0);
							 _localctx.expressions.add(((StatementContext)_localctx).exp2.ast);
							}
							}
							setState(87);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						} 
					}
					setState(92);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				 ((StatementContext)_localctx).ast =  new Printsp_statement(_localctx.expressions); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(94);
				match(T__4);
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(95);
						((StatementContext)_localctx).exp1 = expression(0);
						 _localctx.expressions.add(((StatementContext)_localctx).exp1.ast);
						setState(103);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==T__2) {
							{
							{
							setState(97);
							match(T__2);
							setState(98);
							((StatementContext)_localctx).exp2 = expression(0);
							 _localctx.expressions.add(((StatementContext)_localctx).exp2.ast);
							}
							}
							setState(105);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						} 
					}
					setState(110);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				 ((StatementContext)_localctx).ast =  new Println_statement(_localctx.expressions); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(112);
				match(T__5);
				setState(113);
				((StatementContext)_localctx).expression = expression(0);
				 ((StatementContext)_localctx).ast =  new Read_statement(((StatementContext)_localctx).expression.ast); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				match(T__6);
				setState(117);
				match(T__7);
				setState(118);
				((StatementContext)_localctx).expression = expression(0);
				setState(119);
				match(T__8);
				setState(120);
				match(T__9);
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 74217051722230L) != 0)) {
					{
					{
					setState(121);
					((StatementContext)_localctx).operator2 = statement();
					_localctx.statements1.add(((StatementContext)_localctx).operator2.ast);
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(129);
				match(T__10);
				 ((StatementContext)_localctx).ast =  new While_statement(((StatementContext)_localctx).expression.ast, _localctx.statements1); 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(132);
				match(T__11);
				setState(133);
				match(T__7);
				setState(134);
				((StatementContext)_localctx).expression = expression(0);
				setState(135);
				match(T__8);
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__9) {
					{
					setState(136);
					match(T__9);
					setState(137);
					((StatementContext)_localctx).b1 = block();
					((StatementContext)_localctx).statements1 = ((StatementContext)_localctx).b1.ast;
					setState(139);
					match(T__10);
					}
				}

				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__12) {
					{
					setState(143);
					match(T__12);
					setState(144);
					match(T__9);
					setState(145);
					((StatementContext)_localctx).b2 = block();
					((StatementContext)_localctx).statements2 = ((StatementContext)_localctx).b2.ast;
					setState(147);
					match(T__10);
					}
				}

				 ((StatementContext)_localctx).ast =  new If_statement(((StatementContext)_localctx).expression.ast, _localctx.statements1, _localctx.statements2); 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(153);
				((StatementContext)_localctx).assignment = assignment();
				 ((StatementContext)_localctx).ast =  ((StatementContext)_localctx).assignment.ast; 
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(156);
				((StatementContext)_localctx).ID = match(ID);
				setState(157);
				match(T__7);
				setState(158);
				((StatementContext)_localctx).call_function = call_function();
				setState(159);
				match(T__8);
				 ((StatementContext)_localctx).ast =  new Function_call_statement(((StatementContext)_localctx).ID, ((StatementContext)_localctx).call_function.expressions); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public StatementContext statement;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			setState(175);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				((BlockContext)_localctx).statement = statement();
				 _localctx.ast.add(((BlockContext)_localctx).statement.ast); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 74217051722230L) != 0)) {
					{
					{
					setState(167);
					((BlockContext)_localctx).statement = statement();
					 _localctx.ast.add(((BlockContext)_localctx).statement.ast); 
					}
					}
					setState(174);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Call_functionContext extends ParserRuleContext {
		public List<Expression> expressions = new ArrayList<>();
		public ExpressionContext e1;
		public ExpressionContext e2;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Call_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call_function; }
	}

	public final Call_functionContext call_function() throws RecognitionException {
		Call_functionContext _localctx = new Call_functionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_call_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 74217051717888L) != 0)) {
				{
				setState(177);
				((Call_functionContext)_localctx).e1 = expression(0);
				_localctx.expressions.add(((Call_functionContext)_localctx).e1.ast);
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(179);
					match(T__2);
					setState(180);
					((Call_functionContext)_localctx).e2 = expression(0);
					_localctx.expressions.add(((Call_functionContext)_localctx).e2.ast);
					}
					}
					setState(187);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public Assigment_statement ast;
		public ExpressionContext left;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			((AssignmentContext)_localctx).left = expression(0);
			setState(191);
			match(T__13);
			setState(192);
			((AssignmentContext)_localctx).right = expression(0);
			 ((AssignmentContext)_localctx).ast =  new Assigment_statement(((AssignmentContext)_localctx).left.ast, ((AssignmentContext)_localctx).right.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Expression ast;
		public ExpressionContext exp1;
		public ExpressionContext left;
		public ExpressionContext expression;
		public SimpleTypeContext simpleType;
		public Token ID;
		public Call_functionContext call_function;
		public Token INT_LITERAL;
		public Token INT_REAL;
		public Token CHAR_LITERAL;
		public Token operador;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public Call_functionContext call_function() {
			return getRuleContext(Call_functionContext.class,0);
		}
		public TerminalNode INT_LITERAL() { return getToken(GrammarParser.INT_LITERAL, 0); }
		public TerminalNode INT_REAL() { return getToken(GrammarParser.INT_REAL, 0); }
		public TerminalNode CHAR_LITERAL() { return getToken(GrammarParser.CHAR_LITERAL, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}
